@@ -1,9 +1,6 @@
+-- T3 heavy mobile artilery
+
 UnitBlueprint {
-    Abilities = {
-        Anchor = {
-            Buff = 'AnchorModeImmobilizeAddRange',
-        },
-    },
     AI = {
         GuardScanRadius = 90,
         NeedUnpack = true,
@@ -79,7 +76,7 @@ UnitBlueprint {
         Abilities = {
             '<LOC ability_deploys>Deploys',
             '<LOC ability_supportedartillerygun>Supported Artillery Gun',
-            '<LOC ability_anchor>Anchor'
+            '<LOC ability_bombardarea>Area bombardment',
         },
         AnimationOpen = '/units/INU3004/INU3004_aunpack.sca',
         BuildEffect = {
@@ -160,14 +157,14 @@ UnitBlueprint {
         FactionName = 'Nomads',
         Icon = 'land',
         OrderOverrides = {
-            RULEUTC_SpecialToggle = {
-                bitmapId = 'toggle-anchor',
-                helpText = 'toggle_anchor',
+            RULEUTC_WeaponToggle = {
+                bitmapId = 'toggle-bombardmode',
+                helpText = 'toggle_bombardmode',
             },
         },
         TechLevel = 'RULEUTL_Secret',
         ToggleCaps = {
-            RULEUTC_SpecialToggle = true,
+            RULEUTC_WeaponToggle = true,
         },
         UnitName = '<LOC inu3004_name>Mauler',
         UnitWeight = 1,
@@ -240,8 +237,11 @@ UnitBlueprint {
                 },
             },
             BallisticArc = 'RULEUBA_HighArc',
+            BombardParticipant = true,
+            BombardSwingTurret = true,
+            BombardTurretRotationSpeed = 3,
             CollideFriendly = false,
-            Damage = 600,
+            Damage = 600,       --90dps // 120dps with bombardment
             DamageFriendly = true,
             DamageRadius = 5,
             DamageType = 'Normal',
